[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["command-line-utilities", "filesystem", "multimedia"]
description = "A CLI tool to resize clipboard images on the fly"
edition = "2021"
exclude = ["rustfmt.toml"]
keywords = ["cli", "terminal", "tool", "utility", "image"]
license = "MIT"
name = "picst"
readme = "README.md"
repository = "https://github.com/yamafaktory/picst"
rust-version = "1.65"
version = "2.0.3"

[dependencies]
anyhow = "1.0.69"
arboard = "3.2.0"
async-stream = "0.3.4"
clap = { version = "4.1.8", features = ["derive"] }
dialoguer = "0.10.3"
futures = "0.3.26"
image = "0.24.5"
indicatif = "0.17.3"
itertools = "0.10.5"
tokio = { version = "1.26.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
