[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["command-line-utilities", "filesystem", "multimedia"]
description = "A CLI tool to resize clipboard images on the fly"
edition = "2021"
exclude = ["rustfmt.toml"]
keywords = ["cli", "terminal", "tool", "utility", "image"]
license = "MIT"
name = "picst"
readme = "README.md"
repository = "https://github.com/yamafaktory/picst"
rust-version = "1.65"
version = "2.0.5"

[dependencies]
anyhow = "1.0.71"
arboard = "3.2.0"
async-stream = "0.3.5"
clap = { version = "4.2.7", features = ["derive"] }
dialoguer = "0.10.4"
futures = "0.3.28"
image = "0.24.6"
indicatif = "0.17.3"
itertools = "0.10.5"
tokio = { version = "1.28.1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
